--- a/src/main/resources/static/sa-html/ncov/ncov.html
+++ b/src/main/resources/static/sa-html/ncov/ncov.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width: 100%;height: 100%;">
 <head>
 	<meta charset="UTF-8">
 	<title>疫情数据</title>
@@ -15,19 +15,47 @@
 	<script src="/res/sa.js"></script>
 	<!--    <script src="https://api.map.baidu.com/api?v=2.0&ak=pB1cQmp3mKHrI8PMYQGoogGvGnpahqNn" type="text/javascript"></script>-->
 	<!--    <script type="text/javascript" src="//api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>-->
-	<script src="//webapi.amap.com/maps?v=1.4.15&key=187c426207df3f73a755da81f4a1ec58"></script>
+	<script src="//webapi.amap.com/maps?v=1.4.15&key=187c426207df3f73a755da81f4a1ec58&plugin=Map3D,AMap.DistrictLayer,AMap.Scale,AMap.ToolBar"></script>
 	<script src="//webapi.amap.com/loca?v=1.3.0&key=187c426207df3f73a755da81f4a1ec58&dev=1"></script>
 	<script src="./ncov.js"></script>
 	<style>
-		#map {
+		body {
+			margin: 0;
+		}
+
+		#container {
 			width: 100%;
 			height: 100%;
+			margin: 0;
+		}
+
+		.info span {
+			color: #0288d1;
+		}
+
+		.info {
+			min-width: 200px;
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			background: white;
+			padding: 1rem;
+			opacity: 0.7;
+			border-radius: 1rem;
 		}
 	</style>
 </head>
-<body>
-<div id="map">
+<body style="width: 100%;height: 100%;">
+<div id="container" style="height: 100%">
 
+</div>
+<div class="info" style="min-width: 200px;">
+	<h4>国家/地区</h4>
+	<p>中文名字：<span id="name">--</span></p>
+	<p>英文名字：<span id="eng-name">--</span></p>
+	<p>SOC：<span id="soc">--</span></p>
+	<hr>
+	<p>点击地图任意陆地区域</p>
 </div>
 </body>
 </html>
