--- a/src/main/resources/static/sa-html/ncov/ncov.html
+++ b/src/main/resources/static/sa-html/ncov/ncov.html
@@ -51,9 +51,23 @@
 </div>
 <div class="info" style="min-width: 200px;">
 	<h4>国家/地区</h4>
-	<p>中文名字：<span id="name">--</span></p>
-	<p>英文名字：<span id="eng-name">--</span></p>
+	<h7>数据每半小时自动更新</h7>
+	<p>中文名：<span id="name">--</span></p>
+	<p>英文名：<span id="eng-name">--</span></p>
 	<p>SOC：<span id="soc">--</span></p>
+	<p>累计确诊：<span id="confirmed">--</span>人</p>
+	<p>疑似病例：<span id="suspected">--</span>人</p>
+	<p>治愈人数：<span id="cured">--</span>人</p>
+	<p>死亡人数：<span id="dead">--</span>人</p>
+	<div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ffe4d9;"></span>1-9人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ffcab3;"></span>10-49人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ffaa85;"></span>50-99人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ff7b69;"></span>100-499人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #cc2929;"></span>500-999人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #8c0d0d;"></span>1000-9999人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #660208;"></span>>=10000人</div>
+	</div>
 </div>
 </body>
 </html>
