--- a/src/main/resources/static/sa-html/ncov/ncov.html
+++ b/src/main/resources/static/sa-html/ncov/ncov.html
@@ -66,7 +66,7 @@
 		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ff7b69;"></span>100-499人</div>
 		<div><span style="width: 15px;height: 15px;display: inline-block;background: #cc2929;"></span>500-999人</div>
 		<div><span style="width: 15px;height: 15px;display: inline-block;background: #8c0d0d;"></span>1000-9999人</div>
-		<div><span style="width: 15px;height: 15px;display: inline-block;background: #660208;"></span>>=10000人</div>
+		<div><span style="width: 15px;height: 15px;display: inline-block;background: #660208;"></span>≥10000人</div>
 	</div>
 </div>
 </body>
