--- a/src/main/resources/static/sa-html/ncov/ncov.html
+++ b/src/main/resources/static/sa-html/ncov/ncov.html
@@ -52,13 +52,15 @@
 <div class="info" style="min-width: 200px;">
 	<h4>国家/地区</h4>
 	<h7>数据每半小时自动更新</h7>
+	<p>最后更新时间：<span id="lastupdatetime">--</span></p>
 	<p>中文名：<span id="name">--</span></p>
 	<p>英文名：<span id="eng-name">--</span></p>
 	<p>SOC：<span id="soc">--</span></p>
-	<p>累计确诊：<span id="confirmed">--</span>人</p>
-	<p>疑似病例：<span id="suspected">--</span>人</p>
-	<p>治愈人数：<span id="cured">--</span>人</p>
-	<p>死亡人数：<span id="dead">--</span>人</p>
+	<p>现存确诊：<span id="illnow">--</span></p>
+	<p>累计确诊：<span id="confirmed">--</span></p>
+	<p>疑似病例：<span id="suspected">--</span></p>
+	<p>治愈人数：<span id="cured">--</span></p>
+	<p>死亡人数：<span id="dead">--</span></p>
 	<div>
 		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ffe4d9;"></span>1-9人</div>
 		<div><span style="width: 15px;height: 15px;display: inline-block;background: #ffcab3;"></span>10-49人</div>
